# ESP32-MQTT

./: .gitignore  README  pytest_mqtt5.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c
